# techprog

.github/workflows/: main.yml
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: index.h  preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.cpp  main.h  main_test.cpp  main_test.h
task3/: .CMakeLists.txt.swp  CMakeLists.txt
task5/tests/01-simple-library/: AddTestCase.cpp  LeapTestCase.cpp
task5/tests/02-tree/: TreeTestCase.cpp  TreeTestCase.h
task5/tests/03-weather/: WeatherMock.h
